--- a/css5/css5.css
+++ b/css5/css5.css
@@ -4,10 +4,11 @@ html {
 
 body {
     font-size: initial;
+    padding-bottom:1.5rem;
     margin: 0;
 }
 
-h1,a {
+h1,a,ul,li,p {
     margin: 0;
     text-decoration: none;
 }
@@ -16,10 +17,10 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
-    height: .88rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: .88rem;
     background-color: #5fc0cd;
 }
 
@@ -42,7 +43,6 @@ h1 {
     position: relative;
     height: 3.3rem;
     background: url(task1-css5.png) no-repeat center/cover;
-    /* background-size: cover; */
 }
 
 .portrait {
@@ -56,42 +56,45 @@ h1 {
     position: absolute;
     top:1.16rem;
     left:2.4rem;
-    text-align: center;
     width: 2.3rem;
-    height: 1.2rem;
-    border: .05rem red;  
+    text-align: center;
 }
-.name {
+#name {
     font-size: .36rem;
     letter-spacing: .05rem;
     color: #ffffff;
 }
 
-.age {
+#age {
+    margin: 0 0 0 .3rem;
     font-size: .28rem;
     letter-spacing: .02rem;
-    margin: 0 0 0 .3rem;
     color: #ffffff;
 }
 .location {
     width: .18rem;
     height: .23rem;
-    margin: 0 .05rem 0 .05rem;
+    margin: 0 .05rem -.05rem .05rem;
 }
-.dizhi {
+#dizhi {
     font-size: .24rem;
     letter-spacing: .01rem;
     color: #ffffff;
 }
-.center-box{
+.center-box{ 
     display: flex;
     align-items: center;
     height:1rem;
     border: .01rem solid #e1e5e7;
     background-color: #ffffff;
+    
 }
-
-span::before{
+ul,li{
+    padding: 0;
+    font-size:.32rem;
+    list-style:none;  
+}
+strong::before{
      display: inline-block;
      content:"";
      width: .01rem;
@@ -99,28 +102,24 @@ span::before{
      border: .01rem solid #5fc0cd;
      margin: 0 .3rem 0 .3rem;
 }
-.wjx{
-    width: .24rem;
-    height: .23rem;
+#wjx{
+    padding-left: .4rem;
     margin:0 .1rem 0 .61rem;
-    background: url(task5-css5.png) 0 -.23rem;
-    /* background-position:0 -.46rem; */
+    background: url(task5-css5.png) no-repeat 0 -.46rem;
 }
-.wjx-right{
-    width: .24rem;
-    height: .23rem;
-    background: url(task5-css5.png) 0 -.23rem;
-    margin:0 .1rem 0 -.15rem;
+#wjx-right{
+    padding-left: .4rem;
+    margin:0 .1rem 0 -.2rem;
+    background: url(task5-css5.png) no-repeat 0 -.46rem;
+    
 }
-.ul-style{
-    padding:0;
-    color:#333333;
+
+.main-font{
+    margin: 0 0 0 .61rem;
+    white-space:nowrap;
+    color: #999999;
 }
-ul,li{
-    font-size:.32rem;
-    list-style: none;  
-}
-ul::after{
+span::after{
     display: inline-block;
     content:"";
     width: .008rem;
@@ -128,58 +127,60 @@ ul::after{
     border: .008rem solid #E1E5E7;
     margin:  0 .3rem 0 .3rem;
 }
-ul{
-    padding:0 0 0 .61rem;
-    color: #999999;
+.onespan::after{
+    display: inline-block;
+    content:"";
+    width: .008rem;
+    height: .26rem;
+    border: .008rem solid #E1E5E7;
+    margin:  0 0 0 .3rem;
 }
+.nonespan::after{
+    content:none;
+}
+
+
 .price{
     color: #E26163;
 }
 .center-bottom-box{
     display: flex;
     align-items: center;
-    height:auto;
-    overflow:hidden;
+    height:50%;
     border: .01rem solid #e1e5e7;
     background-color: #ffffff;
+    overflow:hidden;
 }
-.nowrap{
-    white-space:nowrap;
+
+.zwjs{
+    padding: .3rem .3rem .3rem 0;
 }
 .footer-box{
     display: flex;
     align-items: center;
-    justify-content: center;
     position: fixed;
     bottom: 0;
-    z-index: 1;
     width: 100%;
-    height: 1.28rem;
+    height: 1.5rem;
     background-color: #ffffff;
 }
 .liuyan{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 50%;
     height: .88rem;
-    margin: 0 .25rem  .4rem .37rem;
+    margin: 0 .25rem  .04rem .37rem;
     outline: none;
-    border-radius: 10%;
+    border-radius:.15rem;
     border: .01rem solid #5fc0cd;
     color:#5FC0CD;
     background-color: #ffffff;
 }
 .contact{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 50%;
     height: .88rem;
     border: none;
-    outline: none;
-    border-radius: 10%;
-    margin: 0  .37rem .4rem  0;
+    outline: none;  
+    border-radius:.15rem;
+    margin: 0  .37rem .04rem  0;
     color:#ffffff;
     background-color:#5FC0CD;
 }
