--- a/css6/css6.css
+++ b/css6/css6.css
@@ -38,6 +38,7 @@ header {
     border-radius: .15rem;
     border: none;
     background-color:#FFFFFF;
+    outline: none; 
     font-size: .34rem;
     color:#55A8B3;
 }
@@ -70,12 +71,13 @@ header {
     font-size:0.28rem;
     color:#999999;
 }
-.sjx{
+.sjx::after{
+    display: inline-block;
+    content: "";
     float: right;
     border: solid 0.1rem;
     border-color: #AFBAC0 transparent transparent transparent;
     margin: 0.36rem 0.12rem 0 0;
-    
 }
 ul,li{
     margin: 0;
@@ -89,13 +91,14 @@ ul,li{
     display: none;
     position: absolute;
     width: 100%;
+    border-top:.01rem solid #e1e5e7;
     background-color: #f9f9f9;
 }
 .dropdown:hover .dropdown-content {
     display: block; 
 }
 /* 下拉项点击颜色 */
-li.li:hover{
+.color:hover{
     background-color: #5FC0CD;
 }
 
@@ -108,7 +111,7 @@ li.li:hover{
 }
 .date{
     padding-left: .4rem;
-    margin: 0 0 0 .3rem;
+    margin-left:  .3rem;
     background: url(task7-css6.png) no-repeat 0 -.62rem;
     font-size:.24rem;
     /* 字符间距 */
@@ -121,7 +124,7 @@ li.li:hover{
     white-space: nowrap;
 }
 .left{
-    margin: 0 0 0 .7rem;
+    margin-left: .7rem;
     overflow:hidden;
     white-space:nowrap;
     text-overflow:ellipsis;
@@ -132,8 +135,10 @@ li.li:hover{
     font-size: .3rem;
     color:#E63B0E;
 }
-.getback {
+
+.getback::after{
     display: inline-block;
+    content: "";
     width: .19rem;
     height: .19rem;
     margin: 0 .3rem 0 .21rem;
@@ -143,7 +148,7 @@ li.li:hover{
 }
 .location{
     padding-left: .4rem;
-    margin: .2rem 0 .2rem .3rem;
+    margin-left: .3rem;
     background: url(task7-css6.png) no-repeat 0 -1rem;
     font-size:.24rem;
     /* 字符间距 */
@@ -158,18 +163,22 @@ footer{
     bottom: 0;
     left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding:0.2rem 1rem .2rem 1rem;
+    height: 1.2rem;
     background: #F8FAFB;
     z-index: 1;
 }
+button{
+    width: 1.5rem;
+}
 .footer-left{
     border: none;
-    background: url(task7-css6.png) no-repeat 0.12rem -1.56rem;
+    background: url(task7-css6.png) no-repeat 0.53rem -1.56rem;
     outline: none; 
 }
 .font-left{
+    display: block;
     margin-top: .45rem;
     font-size: .1rem;
     color: #5FC0CD;
@@ -184,15 +193,17 @@ footer{
 }
 
 .content-center{
+    display: block;
     height:.4rem;
     background: url(task7-css6.png) no-repeat .2rem -2.2rem;
 }
 .footer-right{
     border: none;
-    background: url(task7-css6.png) no-repeat 0.12rem -2.76rem;
+    background: url(task7-css6.png) no-repeat 0.53rem -2.76rem;
     outline: none;
 }
 .font-right{
+    display: block;
     margin-top: .45rem;
     font-size: .1rem;
     color: #999999;
