--- a/css7/css7-1.css
+++ b/css7/css7-1.css
@@ -78,6 +78,7 @@ header{
     line-height:1.34rem;
     font-size:.32rem;
     letter-spacing: .04rem;
+    text-decoration:none;
     color: #FFFFFF;
 }
 .font{
