--- a/css7/css7-3.css
+++ b/css7/css7-3.css
@@ -113,9 +113,15 @@ header{
     font-size: .2rem;
     color: #C7C7C7;
 }
-.bottom-content{
+.night{
     width: 80%;
-    margin:.28rem auto; 
+    margin:.28rem auto 0 auto; 
+    font-size: .26rem;
+    color: #A6A6A6;
+}
+.daytime{
+    width: 80%;
+    margin: auto; 
     font-size: .26rem;
     color: #A6A6A6;
 }
