--- a/css7/css7-3.css
+++ b/css7/css7-3.css
@@ -2,46 +2,47 @@ html{
     font-size: 312.5%;
 }
 body{
-    padding-bottom: 1.2rem;
+    padding:.72rem 0 1.2rem 0;
     margin: 0;
     font-size: initial;
 }
-p,ul,li{
-    padding: 0;
+p{
     margin: 0;
+}
+ul{
+    padding-left: 0;
     list-style: none;
 }
 
+
 /* header眉页 */
 header{
-    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
     top: 0;
+    width: 100%;
     /* border半透明 */
     border-bottom:.01rem solid rgba(200,200,200,.95);
     background: #29BDE0;
-    line-height: .9rem;
-    text-align: center;
     font-size:.34rem;
     /* 字符间距 */
     letter-spacing: .04rem;
     color: #FFFFFF;
 }
-.left-header::before{
-    float: left;
-    content: "";
+.left-header{
     width: .51rem;
     height: .6rem;
     margin: .1rem 0 0 .2rem;
-    background: url(task-css7.png) no-repeat -2.2rem -1.78rem;
+    background: url(task-css7.png) no-repeat -2.2rem -1.9rem;
 
 }
-.right-header::after{
-    float: right;
-    content: "";
+.right-header{
     width: .51rem;
     height: .6rem;
     margin: .1rem .2rem 0 0;
-    background: url(task-css7.png) no-repeat -.96rem -1.82rem;
+    background: url(task-css7.png) no-repeat -.96rem -1.95rem;
 }
 
 /* main主体 */
