--- a/css7/css7-2.css
+++ b/css7/css7-2.css
@@ -86,6 +86,7 @@ header{
 
 /* main主体 */
 .top-box{
+    position: relative;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -94,7 +95,8 @@ header{
     
 }
 .left-font{
-    margin-left: -2.4rem;
+    position: absolute;
+    left: .46rem;
     font-size: .26rem;
     color: #464646;
 }
