--- a/css8/css/css-1.css
+++ b/css8/css/css-1.css
@@ -189,7 +189,8 @@ h6{
         display: none;
     }
 }
-h5{
+strong{
+    display: block;
     margin: 1.51rem 0 .72rem 0;
     font-size: .18rem;
     color: #333333;
@@ -253,13 +254,19 @@ h5{
     }
 }
 .student-box{
-    width: 3.5rem;
-    height:4.8rem;
+    width: 90%;
     padding: .2rem .32rem .4rem .32rem;
-    margin: 0 .2rem;
+    margin: .2rem auto;
     border: .01rem solid #e4e4e4;
     background: #FFFFFF;
     text-align: center;
+}
+@media(max-width:425px){
+    .student-box{
+        width: 70%;
+        margin: .2rem auto;
+    }
+
 }
 .portrait{
     width: 1.08rem;
@@ -274,4 +281,78 @@ h4{
     font-size: .18rem;
     color: #999999;
     text-align: left;
+}
+ul{
+    list-style: none;
+}
+.indicate-box{
+    text-align: center;
+}
+.indicate-green{
+    display: inline-block;
+    width: .13rem;
+    height: .13rem;
+    border-radius: 100%;
+    background: #29B078;
+}
+@media(max-width:575px){
+    .indicate-green{
+        display: none;
+    } 
+}
+.indicate{
+    display: inline-block;
+    width: .13rem;
+    height: .13rem;
+    border-radius: 100%;
+    border: .01rem solid #e4e4e4;
+    background: #FFFFFF;
+}
+@media(max-width:575px){
+    .indicate{
+        display: none;
+    } 
+}
+.collaborate{
+    display: flex;
+    justify-content: space-between;
+    background: #FFFFFF;
+    line-height: 1.78rem;
+}
+@media(max-width:470px){
+    .collaborate{
+        display: flex;
+        justify-content:center;
+        background: #FFFFFF;
+        line-height: 1.78rem;
+    }
+}
+.alibaba{
+    width: 1.78rem;
+    height: 1.78rem;
+}
+.jishanyun{
+    width: 1.75rem;
+    height: 1.36rem;
+}
+.huanxin{
+    width: 2.41rem;
+    height: 1.78rem;
+}
+.ronglian{
+    width: 1.75rem;
+    height: .65rem;
+}
+.qiniu{
+    width: 1.24rem;
+    height: .65rem;
+}
+.bottom{
+    margin-top:.93rem;
+    background: #FFFFFF;
+}
+strong.font{
+    margin: .21rem 0 .28rem 0;
+    font-size: .18rem;
+    color: #333333;
 }
