--- a/css8/css/css-1.css
+++ b/css8/css/css-1.css
@@ -373,7 +373,7 @@ h4{
     background: #FFFFFF;
 }
 strong.font{
-    margin-top: .21rem
+    margin-top: .21rem;
     font-size: .18rem;
     color: #333333;
 }
