--- a/css8/css/footer.css
+++ b/css8/css/footer.css
@@ -9,6 +9,14 @@ footer{
     font-size: .16rem;
     color: #FFFFFF;
 }
+@media(max-width:575px){
+    .footer-font{
+        line-height: 1rem;
+        font-size: .16rem;
+        color: #FFFFFF;
+    }
+    
+}
 
 .right-font{
     font-size: .16rem;
@@ -38,7 +46,7 @@ div.erweima-center{
 }
 @media(max-width:575px){
     .erweima{
-        margin-left: .25rem;
+        margin:.1rem 0 0 .25rem;
     }
 }
 a.erweima{
@@ -49,8 +57,8 @@ a.erweima{
 @media(max-width:575px){
     .erweima-center{
         position: absolute;
-        top:-.7rem;
-        right: 0;
+        top:2.8rem;
+        left: .32rem;
         margin-right: .5rem;
     }
 }
@@ -58,6 +66,11 @@ a.erweima{
     padding:.07rem 0;
     margin-top: .33rem;
     border-top: .01rem solid #32C086;
+}
+@media(max-width:575px){
+    .copyright-box{
+        margin-top: 1.6rem;
+    }
 }
 .copyright{
     font-size:.14rem;
