--- a/css8/css/css-1.css
+++ b/css8/css/css-1.css
@@ -14,7 +14,7 @@ p,h6,h4,ul{
 /* 轮播图 */
 .picture-size{
     width: 100vw;
-    height: 31vw;
+    height: 31vh;
 }
 .carousel-indicators li {
     width: 10px;
@@ -248,7 +248,6 @@ h4{
 }
 @media(max-width:575px){
     .collaborate{
-        display:flow-root;
         background: #FFFFFF;
         line-height: 1.78rem;
     }
@@ -311,7 +310,9 @@ ul.color{
 .bottom-font:hover{
     border-bottom: .02rem solid #26A26F;
 }
-
+.zoom{
+    list-style: inside;
+}
 @media(max-width:767px){
     .zoom{
         width: 20%;
