--- a/css8/css/css-2.css
+++ b/css8/css/css-2.css
@@ -8,6 +8,9 @@ body{
 p{
     margin: 0;
 }
+ul{
+    padding: 0;
+}
   /* main主体 */
 .picture{
     width: 100vw;
@@ -22,22 +25,30 @@ p{
     font-size: .16rem;
     color: #29B078 !important;
 }
+.box{
+    display: flex;
+    justify-content:space-between;
+}
 .left-nav{
     display: flex;
     justify-content: center;
     margin-top: .29rem ;
     border:.01rem solid #e1e1e1;
     background: #ffffff;
-    }
+}
+.left-nav::before{
+    display: inline-block;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: .01rem;
+    margin-top: 1rem;
+    border: .01rem solid #e1e1e1;
+}
 .headline{
     display: inline-block;
     margin: .21rem 0 .24rem 0 ;
-    border-bottom: .01rem solid #e1e1e1;
     list-style:none;
-}
-.a{
-    width: 100%;
-    border-bottom: .01rem solid #e1e1e1;
 }
 h1.font{
     width: 100%;
@@ -64,5 +75,33 @@ h1.font{
     color: #FF650E !important;
 }
 .txet-box{
+    margin-top: .29rem ;
+    padding:0;
+    border:.01rem solid #e1e1e1;
+    background: #ffffff;
+}
+.top-box{
 
+    border-bottom: .01rem solid #e1e1e1;
+}
+.tudouwang{
+    float: left;
+    width: 2.6rem;
+    height: 1.5rem;
+    margin: .13rem .25rem .16rem .84rem;
+}
+.txet-top{
+    margin :.25rem .64rem .31rem .64rem;
+    line-height: .4rem;
+    font-size: .14rem;
+    letter-spacing:.01rem;
+    color: #999999 !important;
+}
+
+.txet-font{
+    margin:.4rem .64rem .38rem .64rem;
+    line-height: .4rem;
+    font-size: .14rem;
+    text-indent:.54rem;
+    color: #999999 !important;
 }
