--- a/css8/css/css-3.css
+++ b/css8/css/css-3.css
@@ -12,3 +12,27 @@ ul{
     padding: 0;
 }
   /* main主体 */
+.home-box{
+    padding: .31rem 0 .31rem 0;
+    border-bottom: .01rem solid #e1e1e1;
+}
+.black-font{
+    font-size: .16rem;
+    color: #333333 !important;
+}
+.green-font{
+    font-size: .16rem;
+    color: #29B078 !important;
+}
+.direction-box{
+    padding: .23rem 0 .23rem 0;
+    border-bottom: .01rem solid #e1e1e1;
+}
+.direction{
+    font-size: .14rem;
+    color: #999999 !important;
+}
+.option{
+    font-size: .14rem;
+    color: #333333;
+}
