--- a/css8/css/css-3.css
+++ b/css8/css/css-3.css
@@ -76,7 +76,7 @@ a{
     bottom: 0;
     left: 0;
     padding: 2.8rem .93rem 1.76rem .82rem;
-    background: rgba(41,189,224,.6);
+    background: rgba(8,1,3,0.6);
     font-size: .16rem;
     color: #FFFFFF;
     transition:0.6s;
