--- a/css8/css/css-1.css
+++ b/css8/css/css-1.css
@@ -175,7 +175,8 @@ strong{
 }
 .student-box{
     width: 90%;
-    padding: .2rem .32rem .4rem .32rem;
+    height: 6rem;
+    padding: .5rem .32rem .4rem .32rem;
     margin: .2rem auto;
     border: .01rem solid #e4e4e4;
     background: #FFFFFF;
@@ -193,14 +194,31 @@ strong{
     height: 1.08rem;
 }
 h4{
-    margin: .36rem 0 .26rem 0;
+    margin: .4rem 0 .6rem 0;
     font-size: .18rem;
     color: #333333;
 }
 .show{
+    text-align: left;
     font-size: .18rem;
     color: #999999;
-    text-align: left;
+}
+@media(max-width:767px){
+    .show{
+        line-height: .5rem;
+    }
+}
+@media(min-width:380px) and (max-width:576px){
+    .show{
+        line-height: .5rem;
+        margin: 0 .3rem;
+    }
+}
+@media(min-width:426px) and (max-width:575px){
+    .show{
+        line-height: .5rem;
+        margin: 0 1rem;
+    }
 }
 .none{
     list-style: none;
@@ -271,8 +289,8 @@ h4{
     height: 1.78rem;
 }
 .jishanyun{
-    width: 1.75rem;
-    height: 1.36rem;
+    width: .8rem;
+    height: .8rem;
 }
 .huanxin{
     width: 1.34rem;
@@ -299,6 +317,17 @@ strong.font{
     display: flex;
     justify-content: space-between;
     margin-top: .28rem;
+}
+@media(min-width:451px){
+    .bottom-box{
+        margin-left: -1rem;
+    }
+}
+@media(min-width:451px){
+    .bottom-box{
+        display: flex;
+        justify-content: space-around;
+    }
 }
 @media(max-width:767px){
     .bottom-box{
