--- a/css8/css/footer.css
+++ b/css8/css/footer.css
@@ -4,8 +4,8 @@ a{
 /* footer页尾 */
 footer{
     width: 100%;
-    margin-top: .18rem;
-    padding-top: .36rem;
+    margin-top: 2.5rem;
+    padding-top: .2rem;
     background: #26A26F;
 }
 .footer-font{
@@ -14,7 +14,7 @@ footer{
 }
 @media(max-width:575px){
     .footer-font{
-        line-height: 1rem;
+        line-height: .6rem;
         font-size: .16rem;
         color: #FFFFFF;
     }
@@ -44,8 +44,8 @@ div.erweima-center{
 }
 .erweima{
     display: block;
-    width: .92rem;
-    height: .92rem;
+    width: 80px;
+    height: 80px;
 }
 @media(max-width:575px){
     .erweima{
@@ -55,24 +55,25 @@ div.erweima-center{
 a.erweima{
     position: absolute;
     top:.5rem;
-    right: .55rem;
+    right:0;
+    margin-right: .2rem
 }
 @media(max-width:575px){
     .erweima-center{
         position: absolute;
-        top:2.8rem;
+        top:1.8rem;
         left: .32rem;
         margin-right: .5rem;
     }
 }
 .copyright-box{
     padding:.07rem 0;
-    margin-top: .33rem;
+    margin-top: .7rem;
     border-top: .01rem solid #32C086;
 }
 @media(max-width:575px){
     .copyright-box{
-        margin-top: 1.6rem;
+        margin-top: 2.7rem;
     }
 }
 .copyright{
